old_solidserver/solidserver-minikube.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: solidserver
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: solidserver
  name: solidserver-deployment
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: solidserver-deployment
  replicas: 1
  template:
    metadata:
      labels:
        app.kubernetes.io/name: solidserver-deployment
    spec:
      containers:
      - image: nodesolidserver/node-solid-server:latest
        imagePullPolicy: Always
        name: solidserver-deployment
        ports:
        - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  namespace: solidserver
  name: service-solidserver
spec:
  ports:
    - port: 8080
      targetPort: 3000
      protocol: TCP
  type: NodePort
  selector:
    app.kubernetes.io/name: solidserver-deployment

---
apiVersion: networking.k8s.io/v1
   
kind: Ingress
   
metadata:

  namespace : solidserver
   
  name: example-ingress
   
  annotations:
   
    nginx.ingress.kubernetes.io/rewrite-target: /
   
spec:
   
  rules:
   
    - host: hello-world.info
   
      http:
   
        paths:
   
          - path: /
   
            pathType: Prefix
   
            backend:
   
              service:
   
                name: service-solidserver
   
                port:
   
                  number: 8080
